
nobase_include_HEADERS = json/value.hpp
nobase_include_HEADERS += json/refcounted.hpp
nobase_include_HEADERS += json/ivalue.hpp
nobase_include_HEADERS += json/iscalar.hpp
nobase_include_HEADERS += json/ibool.hpp
nobase_include_HEADERS += json/inumeric.hpp
nobase_include_HEADERS += json/istring.hpp
nobase_include_HEADERS += json/iarray.hpp
nobase_include_HEADERS += json/iobject.hpp
nobase_include_HEADERS += json/util.hpp

